--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Horizon Core Requirements
-Django>=1.4,<1.7
+Django>=1.11.18
 django_compressor>=1.3
 django_openstack_auth>=1.1.4
 eventlet>=0.13.0
